--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
               "node_modules/slick-carousel/slick/slick.scss",
               "node_modules/slick-carousel/slick/slick-theme.scss",
               "src/assets/app.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/css/custom.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
